--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,9 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "blade-ui-kit/blade-icons": "^1.8",
+        "dompdf/dompdf": "^3.1",
+        "hasnayeen/blade-eva-icons": "^2.1",
         "laravel/framework": "^12.0",
         "laravel/tinker": "^2.10.1"
     },
